--- a/HackISU/showstat.html
+++ b/HackISU/showstat.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-	<p><h1 id="title">NBA MVP RACE</h1></p>
+	<p><h1 id="title">NBA TOP SCORERS</h1></p>
 	<nav>
 		<ul>
 			<li><a href="showstat.html">Home</a></li>
