change home src

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p><h1 id="title">NBA TOP SCORERS</h1></p>
 	<nav>
 		<ul>
-			<li><a href="showstat.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#">Infographics</a></li>
 		</ul>
 	</nav>
