--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Infographics</a></li>
+			<li><a href="#">Analysis</a></li>
 		</ul>
 	</nav>
 	<div>
